fix:spacing

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ section {
 /* RESUME MENU */
 .resume h3 {
     position: relative;
-    padding:4em;
+    padding:2em;
     margin-top: 2em;
     display:block;  
     justify-content: center;
